Fix link underline thickness on small screens

--- a/style.css
+++ b/style.css
@@ -719,7 +719,7 @@ body.fade-out {
     .link {
         text-decoration: underline;
         text-decoration-color: #555555;
-        text-decoration-thickness: 2px;
+        text-decoration-thickness: 1px;
         text-underline-offset: 0.2em;
     }
     .tagline,
